--- a/quick-tabs/manifest.json
+++ b/quick-tabs/manifest.json
@@ -1,8 +1,8 @@
 {
   "background": {
-    "scripts": ["background.js"]
+    "service_worker": "background.js"
   },
-  "browser_action": {
+  "action": {
     "default_icon": "assets/icon-32.png",
     "default_title": "Quick Tabs",
     "default_popup": "popup.html?popup=true"
@@ -14,11 +14,11 @@
     "48": "assets/icon-48.png"
   },
   "minimum_chrome_version": "25",
-  "manifest_version": 2,
+  "manifest_version": 3,
   "offline_enabled": true,
   "name": "Quick Tabs",
   "options_page": "options.html",
-  "permissions": [ "tabs", "bookmarks", "history" ],
+  "host_permissions": [ "tabs", "bookmarks", "history" ],
   "update_url": "http://clients2.google.com/service/update2/crx",
 
   "version": "2021.6.29",
